Optimisation du pom.xml