@@ -2,6 +2,8 @@ package org.esupportail.referentiel.conf;
 
 import java.io.Serializable;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import javax.xml.ws.BindingProvider;
@@ -29,7 +31,7 @@ import gouv.education.apogee.commun.client.ws.ReferentielMetier.ReferentielMetie
 
 @ConditionalOnProperty(name = "app.mode_apogee")
 @Configuration
-public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Serializable { // NO_UCD (unused code)
+public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean, Serializable { // NO_UCD (unused code)
 
 	private static final long serialVersionUID = -1521878436222655994L;
 
@@ -103,7 +105,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean
-	EtudiantMetierServiceInterface etudiantMetier() {
+	EtudiantMetierServiceInterface etudiantMetier() throws URISyntaxException {
 		String wsdlUrl = etudiantMetierUrlService + "?wsdl";
 		EtudiantMetierServiceInterfaceService etudiantMetierService = null;
 		String pwd = etudiantMetierPassword;
@@ -111,7 +113,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			etudiantMetierService = new EtudiantMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			log.error(e.getMessage());
@@ -127,7 +129,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean("administratifMetier")
-	AdministratifMetierServiceInterface administratifMetier() {
+	AdministratifMetierServiceInterface administratifMetier() throws URISyntaxException {
 
 		String wsdlUrl = administratifMetierUrlService + "?wsdl";
 		String pwd = administratifMetierPassword;
@@ -136,7 +138,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 		AdministratifMetierServiceInterfaceService administratifMetierService;
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			administratifMetierService = new AdministratifMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			log.error(e.getMessage());
@@ -153,7 +155,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean("pedagogiqueMetier")
-	PedagogiqueMetierServiceInterface pedagogiqueMetier() {
+	PedagogiqueMetierServiceInterface pedagogiqueMetier() throws URISyntaxException {
 
 		String wsdlUrl = pedagogiqueMetierUrlService + "?wsdl";
 		String pwd = pedagogiqueMetierPassword;
@@ -161,7 +163,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 		PedagogiqueMetierServiceInterfaceService pedagogiqueMetierService;
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			pedagogiqueMetierService = new PedagogiqueMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			log.error(e.getMessage());
@@ -177,7 +179,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean
-	GeographieMetierServiceInterface geographieMetier() {
+	GeographieMetierServiceInterface geographieMetier() throws URISyntaxException {
 
 		String wsdlUrl = geographieMetierUrlService + "?wsdl";
 		String pwd = geographieMetierPassword;
@@ -185,7 +187,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 		GeographieMetierServiceInterfaceService geographieMetierService;
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			geographieMetierService = new GeographieMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			log.error(e.getMessage());
@@ -201,15 +203,15 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean
-	ReferentielMetierServiceInterface referentielMetier() {
-		
+	ReferentielMetierServiceInterface referentielMetier() throws URISyntaxException {
+
 		String wsdlUrl = referentielMetierUrlService + "?wsdl";
 		String pwd = referentielMetierPassword;
 		String username = referentielMetierUserName;
 		ReferentielMetierServiceInterfaceService referentielMetierService;
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			referentielMetierService = new ReferentielMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			log.error(e.getMessage());
@@ -225,7 +227,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 	}
 
 	@Bean
-	OffreFormationMetierServiceInterface offreFormationMetier() {
+	OffreFormationMetierServiceInterface offreFormationMetier() throws URISyntaxException {
 		String wsdlUrl = offreFormationMetierUrlService + "?wsdl";
 		String pwd = offreFormationMetierPassword;
 		String username = offreFormationMetierUserName;
@@ -233,7 +235,7 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 		OffreFormationMetierServiceInterfaceService offreFormationMetierService;
 		URL wsdlLocation;
 		try {
-			wsdlLocation = new URL(wsdlUrl);
+			wsdlLocation = new URI(wsdlUrl).toURL();
 			offreFormationMetierService = new OffreFormationMetierServiceInterfaceService(wsdlLocation);
 		} catch (MalformedURLException e) {
 			offreFormationMetierService = new OffreFormationMetierServiceInterfaceService();
@@ -245,16 +247,6 @@ public class ApogeeWsConfigBindingProviderMetohde implements InitializingBean,Se
 		bp.getRequestContext().put(BindingProvider.USERNAME_PROPERTY, username);
 		bp.getRequestContext().put(BindingProvider.PASSWORD_PROPERTY, pwd);
 		return offreFormationMetierServiceInterface;
-	}
-
-	private URL wsdlLocation(String url) {
-		URL wsdlLocation = null;
-		try {
-			wsdlLocation = new URL(url);
-		} catch (MalformedURLException e) {
-			log.error("etudiantMetierUrlService wsdlLocation :", e);
-		}
-		return wsdlLocation;
 	}
 
 	public String getAdministratifMetierUrlService() {
